# triton_project

stingray_project/: CMakeLists.txt  README_Anh.md  package.xml
stingray_project/launch/: triton_amcl.launch  triton_gmapping.launch  triton_hectormapping.launch
stingray_project/scripts/: gesture_controller.py  human_follower.py  teleop_robot.py
triton_project/: CMakeLists.txt  package.xml
triton_project/launch/: control.launch
triton_project/msg/: GestureCommand.msg
triton_project/scripts/: gesture_listener.py  triton_controller.py
